# PFT

./: .gitignore  README.md  main.py  pyproject.toml
agents/expense_agent/: agent.py  instructions.md
agents/orchestrator_agent/: agent.py  instructions.md
lib/: __init__.py  fetch_model.py  instructions.py
pft-agents/agents/first_agent/: agent.py
