[project]
name = "pft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.12"
dependencies = [
    "google-adk>=1.26.0",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.hatch.build.targets.wheel]
packages = ["agents", "lib", "tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"